--- a/manifest.json
+++ b/manifest.json
@@ -13,8 +13,9 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content.js"],
-      "run_at": "document_idle"
+      "js": ["content_final.js"],
+      "run_at": "document_idle",
+      "all_frames": true
     }
   ],
   "host_permissions": ["<all_urls>"]
