--- a/manifest.json
+++ b/manifest.json
@@ -13,9 +13,10 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["content_final.js"],
+      "js": ["content_heboja.js"],
       "run_at": "document_idle",
-      "all_frames": true
+      "all_frames": true,
+      "type": "module"
     }
   ],
   "host_permissions": ["<all_urls>"]
